--- a/springboot-orientdb/pom.xml
+++ b/springboot-orientdb/pom.xml
@@ -14,7 +14,7 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>1.4.1.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 
 	<properties>
@@ -36,8 +36,22 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-
-
+		<!-- gson -->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.7</version>
+		</dependency>
+		<dependency>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>net.sf.json-lib</groupId>
+			<artifactId>json-lib</artifactId>
+			<classifier>jdk15</classifier>
+			<version>2.4</version>
+		</dependency>
 		<!-- OrientDB -->
 		<dependency>
 			<groupId>com.orientechnologies</groupId>
@@ -55,8 +69,8 @@
 			<version>${orientdb.version}</version>
 		</dependency>
 		<dependency>
-		    <groupId>com.orientechnologies</groupId>
-		    <artifactId>orientdb-jdbc</artifactId>
+			<groupId>com.orientechnologies</groupId>
+			<artifactId>orientdb-jdbc</artifactId>
 			<version>${orientdb.version}</version>
 		</dependency>
 		<dependency>
