--- a/springboot-orientdb/.project
+++ b/springboot-orientdb/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>spring-orientdb</name>
+	<name>springboot-orientdb</name>
 	<comment></comment>
 	<projects>
 	</projects>
