--- a/springboot-orientdb/pom.xml
+++ b/springboot-orientdb/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>xyz.dassiorleando</groupId>
-	<artifactId>spring-orientdb</artifactId>
+	<artifactId>springboot-orientdb</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
