--- a/springboot-mangodb/src/main/resources/application.yml
+++ b/springboot-mangodb/src/main/resources/application.yml
@@ -1,2 +1,6 @@
 server:
   port: 10000
+logging:
+  level:
+    #com.listenrobot.common.http.filter.HttpLoggingFilter: DEBUG
+    org.springframework.data.mongodb.core: error
